test/LitTests/Parser/Class/MethodDefInClassDecl.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass {
	// CHECK: .loci:6:16: error: Expected 'SEMICOLON'; got 'LCURLYBRACKET'.
	void method() { }
}
